# backend-diary

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-celery  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: dev.yml
common/: consts.py  models.py
config/: settings.py  urls.py
diary/: models.py  serializers.py  urls.py  views.py
diary/migrations/: 0001_initial.py  0003_alter_diary_date.py
docker/: Dockerfile  Dockerfile-celery
image/: models.py  serializers.py  views.py
image/migrations/: 0001_initial.py  0003_alter_image_diary.py
resources/nginx/: nginx.conf
resources/ssl/: localhost-key.pem  localhost.pem
scripts/: push_docker_image.sh  start_app.sh
src/ai/: ai_service.py  consts.py  fake.py  openai_client.py
src/common/: consts.py  exception_handler.py  exceptions.py  responses.py
src/common/exceptions/: error_codes.py  exceptions.py
src/config/: celery.py  urls.py
src/config/settings/: __init__.py  base.py  database.py  dev.py  local.py  log.py  swagger.py
src/diary/: admin.py  consts.py  exceptions.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
src/diary/management/commands/: seed_test_data.py
src/diary/migrations/: 0001_initial.py  0002_alter_diary_date.py  0002_diary_weather_diary_diary_user_id_b99d8f_idx.py  0002_initial.py  0003_remove_diary_unique_user_date_diary.py  0004_diary_unique_user_date_diary.py  0005_alter_diary_date.py
src/diary/serializers/: request_serializers.py  response_serializers.py
src/diary/urls/: dev.py  prod.py
src/image/: admin.py  consts.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
src/image/migrations/: 0001_initial.py  0002_alter_image_diary.py
src/oauth/: urls.py  views.py
src/tag/: const.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
src/tag/migrations/: 0001_initial.py  0002_alter_tag_diary.py
src/user/: managers.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
src/user/migrations/: 0001_initial.py  0002_alter_user_table.py  0002_user_groups_user_user_permissions.py
src/utils/: custom_jwt_authentication.py  date_utils.py  log_utils.py  open_ai_util.py  token_utils.py  user_utils.py
tag/: models.py  urls.py
tag/migrations/: 0001_initial.py  0003_alter_tag_diary.py
token/: models.py
user/: models.py
utils/: user_utils.py
